Arc welding processes (#104)
* refactor schemas, add II modulation, add notebook_fileprinter
* add doc/welding-processes.md
* define generic spray arc schema
* add asdf tests for GmawProcess
* fix name attribute propagation when reading TimeSeries from array
* add generic GMAW process testcase
* ignore /doc folder in codacy config

Co-authored-by: Hirthammer <volker.hirthammer@bam.de>

--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -89,6 +89,10 @@ excluded_words:
   - sympify
   # welding -------------------------------------
   - weldment
+  - GmawProcess
+  - GmawProcessTypeAsdf
+  - CLOOS
+  - Quinto
   # conda ---------------------------------------
   - conda
   - noarch
@@ -110,4 +114,7 @@ excluded_words:
   - bamwelding
   - netcdf
   - msm
+  - Fronius
+  - gmaw
+  - feedrate
   - Beckhoff
