add conda-build for documentation

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,8 +2,7 @@ name: documentation
 on: [push]
 
 jobs:
-  pytest:
-    name: pytest
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
