--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -42,9 +42,12 @@ jobs:
         shell: bash -l {0}
         run: conda develop .
 
-      - name: copy turorials
+      - name: copy tutorials
         shell: bash -l {0}
-        run: cp ./tutorials/* ./doc/tutorials/
+        run: |
+          cp ./tutorials/GMAW_process.ipynb ./doc/tutorials/
+          cp ./tutorials/welding_example_01_basics.ipynb ./doc/tutorials/
+          cp ./tutorials/welding_example_02_weaving.ipynb ./doc/tutorials/
 
       - name: Build docs
         shell: bash -l {0}
