--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0.yaml
@@ -12,20 +12,30 @@ description: |
 type: object
 properties:
   name:
+    description: |
+      The name of the subsystem.
     type: string
 
   parent_system:
+    description: |
+      The name of the parent system.
     type: string
 
   root_cs:
+    description: |
+      The name of the subsystems root coordinate system.
     type: string
 
   members:
+    description: |
+      The names of all coordinate systems that belong to the subsystem.
     type: array
     items:
       type: string
 
   subsystem_names:
+    description: |
+      The names of all subsystems that are attached to this subsystem.
     type: array
     items:
       type: string
