--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -42,6 +42,10 @@ jobs:
         shell: bash -l {0}
         run: conda develop .
 
+      - name: copy changelog
+        shell: bash -l {0}
+        run: cp ./CHANGELOG.md ./doc/
+
       - name: copy tutorials
         shell: bash -l {0}
         run: cp ./tutorials/* ./doc/tutorials/
