try adding asdf schema with sphinx-asdf

--- a/environment.yml
+++ b/environment.yml
@@ -42,3 +42,7 @@ dependencies:
   - sphinxcontrib-napoleon
   - nbsphinx
   - pydata-sphinx-theme
+  # pip packages
+  - pip
+  - pip:
+    - sphinx-asdf
