--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -21,7 +21,7 @@ submodules:
 
 # Optionally set the version of Python and requirements required to build your docs
 conda:
-    file: environment.yml
+    file: ./environment.yml
 python:
    version: 3.7
    setup_py_install: true
