--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,8 +2,8 @@
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
-# Required
-version: 2
+## Required
+#version: 2
 
 ## Build documentation in the docs/ directory with Sphinx
 #sphinx:
