--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,8 +2,8 @@
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
-## Required
-#version: 2
+# Required
+version: 2
 
 ## Build documentation in the docs/ directory with Sphinx
 #sphinx:
@@ -20,8 +20,11 @@
 ##  - pdf
 
 # Optionally set the version of Python and requirements required to build your docs
+
 conda:
-    file: ci/requirements-docs.yml
+  environment: environment.yml
 python:
    version: 3.7
-   setup_py_install: true
+   install:
+      - method: pip
+        path: .
