--- a/ci/requirements-docs.yml
+++ b/ci/requirements-docs.yml
@@ -10,6 +10,8 @@ dependencies:
   - sphinx-copybutton
   - sphinxcontrib-bibtex
   - pydata-sphinx-theme
+  - jupyter_client
+  - ipykernel
   - pip
   - pip:
       - sphinx-asdf
