--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,11 +5,11 @@
 # Required
 version: 2
 
-## Build documentation in the docs/ directory with Sphinx
-#sphinx:
-#  builder: html
-#  configuration: doc/conf.py
-#  fail_on_warning: false
+# Build documentation in the docs/ directory with Sphinx
+sphinx:
+  builder: html
+  configuration: doc/conf.py
+  fail_on_warning: true
 #
 ## List of submodules to be included.
 #submodules:
