--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -6,7 +6,7 @@ test_patterns = [
 ]
 
 exclude_patterns = [
-  "docs/**",
+  "doc/**",
   "versioneer.py",
   "weldx/_version.py",
   "weldx/asdf/**",
