RTD + nbsphinx + sphinx-asdf setup (#124)
* add config for readthedocs integration
* add nbsphinx and sphinx-asdf configuration
* add main docs index pages
* add GitHub action for docs build
* update conda environment

Co-authored-by: Ramasetti <nikitha-shruthi.ramasetti@bam.de>
Co-authored-by: Nikitha-ramasetti <38511466+Nikitha-ramasetti@users.noreply.github.com>

--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -27,6 +27,7 @@ excluded_words:
   - versioneer
   - isort
   - networkx
+  - shutil
   # matplotlib ----------------------------------
   - pyplot
   - gca
@@ -96,6 +97,12 @@ excluded_words:
   # conda ---------------------------------------
   - conda
   - noarch
+  # documentation -------------------------------
+  - readthedocs
+  - recommonmark
+  - nbsphinx
+  - mathjax
+  - toctree
   # markdown / latex ----------------------------
   - cdot
   # other ---------------------------------------
@@ -120,3 +127,4 @@ excluded_words:
   - Beckhoff
   - unmerge
   - itertools
+  - rst
