--- a/environment.yml
+++ b/environment.yml
@@ -40,6 +40,7 @@ dependencies:
   - sphinx-copybutton
   - sphinxcontrib-bibtex
   - pydata-sphinx-theme
+  - numpydoc>=0.5
   # pip packages
   - pip
   - pip:
