update documentation and example (#158)
* update documentation and example

* add BAM to .typo-ci.yml

* update disclaimer.md

* Update .typo-ci.yml

Co-authored-by: vhirtham <volker.hirthammer@bam.de>

--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -118,6 +118,7 @@ excluded_words:
   - ureg
   - Cagtay
   - Fabry
+  - Pittner
   - xyz
   - bamwelding
   - netcdf
@@ -131,3 +132,9 @@ excluded_words:
   - rst
   - pycharm
   - tslibs
+  # German ---------------------------------------
+  - Bundesanstalt 
+  - für 
+  - Materialforschung 
+  - und 
+  - prüfung
