add groove types and simplify ASDF Type name and class association

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/groove/iso_9692_1/IGroove-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/groove/iso_9692_1/IGroove-1.0.0.yaml
@@ -5,7 +5,7 @@ id: "http://weldx.bam.de/schemas/weldx/groove/iso_9692_1/IGroove-1.0.0"
 tag: "tag:weldx.bam.de:weldx/groove/iso_9692_1/IGroove-1.0.0"
 
 title: |
-  I-Groove representation.
+  IGroove representation.
 
 type: object
 properties:
