--- a/weldx/asdf/schemas/weldx.bam.de/weldx/groove/iso_9692_1/DVGroove-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/groove/iso_9692_1/DVGroove-1.0.0.yaml
@@ -1,27 +1,29 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/groove/iso_9692_1/VVGroove-1.0.0"
-tag: "tag:weldx.bam.de:weldx/groove/iso_9692_1/VVGroove-1.0.0"
+id: "http://weldx.bam.de/schemas/weldx/groove/iso_9692_1/DVGroove-1.0.0"
+tag: "tag:weldx.bam.de:weldx/groove/iso_9692_1/DVGroove-1.0.0"
 
 title: |
-  VVGroove representation.
+  DVGroove representation.
 
 type: object
 properties:
   t:
     $ref: "./terms-1.0.0#/definitions/workpiece-thickness"
-  alpha:
+  alpha_1:
     $ref: "./terms-1.0.0#/definitions/groove-angle"
-  beta:
-    $ref: "./terms-1.0.0#/definitions/bevel-angle"
+  alpha_2:
+    $ref: "./terms-1.0.0#/definitions/groove-angle"
   b:
     $ref: "./terms-1.0.0#/definitions/root-gap"
   c:
     $ref: "./terms-1.0.0#/definitions/root-face"
-  h:
+  h1:
     $ref: "./terms-1.0.0#/definitions/root-face"
-required: [t, alpha, beta, b, c, h]
-propertyOrder: [t, alpha, beta, b, c, h]
+  h2:
+    $ref: "./terms-1.0.0#/definitions/root-face"
+required: [t, alpha_1, alpha_2, b, c]
+propertyOrder: [t, alpha_1, alpha_2, b, c]
 
 ...
