--- a/weldx/asdf/schemas/weldx.bam.de/weldx/groove/iso_9692_1/HUGroove-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/groove/iso_9692_1/HUGroove-1.0.0.yaml
@@ -10,14 +10,16 @@ title: |
 type: object
 properties:
   t:
-    $ref: "#/definitions/workpiece-thickness"
+    $ref: "./terms-1.0.0#/definitions/workpiece-thickness"
   beta:
-    $ref: "#/definitions/bevel-angle"
+    $ref: "./terms-1.0.0#/definitions/bevel-angle"
   R:
-    $ref: "#/definitions/bevel-radius"
+    $ref: "./terms-1.0.0#/definitions/bevel-radius"
   b:
-    $ref: "#/definitions/root-gap"
+    $ref: "./terms-1.0.0#/definitions/root-gap"
   c:
-    $ref: "#/definitions/root-face"
+    $ref: "./terms-1.0.0#/definitions/root-face"
 required: [t, beta, R, b, c]
 propertyOrder: [t, beta, R, b, c]
+
+...
