Add serialization of CSM reference time

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0.yaml
@@ -20,6 +20,11 @@ properties:
       The name of the parent system.
     type: string
 
+  reference_time:
+    description: |
+      A timestamp that serves as reference point for all attached coordinate systems.
+    tag: "tag:weldx.bam.de:weldx/time/timestamp-1.0.0"
+
   root_cs:
     description: |
       The name of the subsystems root coordinate system.
