Fix some inconsistent parameter naming

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
@@ -35,7 +35,7 @@ wx_shape:
     data: [(t), 3, 3]
 
 required: [orientations, coordinates]
-propertyOrder: [reference_time, time, orientations, coordinates]
+propertyOrder: [time_ref, time, orientations, coordinates]
 flowStyle: block
 additionalProperties: false
 ...
