--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -8,7 +8,7 @@ test_patterns = [
 exclude_patterns = [
   "doc/**",
   "versioneer.py",
-  "scripts/**"
+  "scripts/**",
   "weldx/_version.py",
   "weldx/asdf/**",
 ]
