--- a/environment.yml
+++ b/environment.yml
@@ -41,6 +41,7 @@ dependencies:
   - sphinxcontrib-bibtex
   - pydata-sphinx-theme
   - numpydoc>=0.5
+  - sphinx-autodoc-typehints
   # pip packages
   - pip
   - pip:
