--- a/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_shape_validator-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_shape_validator-1.0.0.yaml
@@ -38,10 +38,14 @@ properties:
         tag: tag:stsci.edu:asdf/core/ndarray-1.0.0
         wx_shape: [9,7,5,3,1]
 
+  optional_prop:
+    tag: tag:stsci.edu:asdf/core/ndarray-1.0.0
+    wx_shape: [1,2,(3),(4)]
+
 
 
 required: [prop1,prop2,prop3,prop4,nested_prop]
-propertyOrder: [prop1,prop2,prop3,prop4,nested_prop]
+propertyOrder: [prop1,prop2,prop3,prop4,nested_prop,optional_prop]
 flowStyle: block
 additionalProperties: true
 wx_shape:
@@ -53,4 +57,6 @@ wx_shape:
   nested_prop:
     p1: [10,1~10,6,4,2]
     p2: [(m),7,5,3,1]
+    (p3): [a,2,n]
+  (optional_prop): [a,2,n]
 ...
