--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
@@ -73,8 +73,7 @@ oneOf:
     wx_shape:
       #description: |
       #  The outer dimension of the data needs to be identical to the times dimension.
-      time:
-        values: [t]
+      time: [t]
       values: [t, ...]
     required: [time, unit, shape, interpolation, values]
     additionalProperties: false
