--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -8,6 +8,7 @@ test_patterns = [
 exclude_patterns = [
   "doc/**",
   "versioneer.py",
+  "scripts/**",
   "weldx/_version.py",
   "weldx/asdf/**",
 ]
