--- a/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_shape_validator-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_shape_validator-1.0.0.yaml
@@ -38,8 +38,10 @@ properties:
         tag: tag:stsci.edu:asdf/core/ndarray-1.0.0
         wx_shape: [9,7,5,3,1]
 
-  timedelta_prop:
-    tag: "tag:weldx.bam.de:weldx/time/timedeltaindex-1.0.0"
+  time_prop:
+    oneOf:
+      - tag: "tag:weldx.bam.de:weldx/time/timedeltaindex-*"
+      - tag: "tag:weldx.bam.de:weldx/time/datetimeindex-*"
 
   optional_prop:
     tag: tag:stsci.edu:asdf/core/ndarray-1.0.0
@@ -47,7 +49,7 @@ properties:
 
 
 
-required: [prop1, prop2, prop3, prop4, nested_prop, timedelta_prop]
+required: [prop1, prop2, prop3, prop4, nested_prop, time_prop]
 propertyOrder: [prop1,prop2,prop3,prop4,nested_prop,optional_prop]
 flowStyle: block
 additionalProperties: true
@@ -61,6 +63,6 @@ wx_shape:
     p1: [10,1~10,6,4,2]
     p2: [(m),7,5,3,1]
     (p3): [a,2,n]
-  timedelta_prop: [m]
+  time_prop: [m]
   (optional_prop): [a,2,n]
 ...
