--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
@@ -29,12 +29,12 @@ properties:
     tag: tag:weldx.bam.de:weldx/core/variable-1.0.0
 
 wx_shape:
-  coordinates:
+  (coordinates):
     data: [(t), 3]
-  orientations:
+  (orientations):
     data: [(t), 3, 3]
 
-required: [orientations, coordinates]
+required: []
 propertyOrder: [reference_time, time, orientations, coordinates]
 flowStyle: block
 additionalProperties: false
