--- a/weldx/asdf/schemas/weldx.bam.de/weldx/groove/iso_9692_1/VGroove-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/groove/iso_9692_1/VGroove-1.0.0.yaml
@@ -7,6 +7,17 @@ tag: "tag:weldx.bam.de:weldx/groove/iso_9692_1/VGroove-1.0.0"
 title: |
   VGroove representation.
 
+examples:
+  -
+    - A simple V-Groove
+    - |
+        !<tag:weldx.bam.de:weldx/groove/iso_9692_1/VGroove-1.0.0>
+          t: !unit/quantity-1.1.0 {unit: millimeter, value: 15}
+          alpha: !unit/quantity-1.1.0 {unit: degree, value: 40}
+          b: !unit/quantity-1.1.0 {unit: millimeter, value: 2}
+          c: !unit/quantity-1.1.0 {unit: millimeter, value: 1}
+          code_number: ['1.3', '1.5']
+
 type: object
 properties:
   t:
