use sphinx-asdf from weldx fork

--- a/environment.yml
+++ b/environment.yml
@@ -45,4 +45,4 @@ dependencies:
   # pip packages
   - pip
   - pip:
-    - sphinx-asdf
+    - git+https://github.com/CagtayFabry/sphinx-asdf.git@sphinx-weldx
