switch to setuptools_scm versioning

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,9 +50,5 @@ exclude_lines =
     def __str__
     def _ipython_display_
 
-[versioneer]
-VCS = git
-versionfile_source = weldx/_version.py
-versionfile_build = weldx/_version.py
-tag_prefix =
-parentdir_prefix =
+[options]
+setup_requires = setuptools_scm
