add setuptools_scm to conda build requirements

--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -16,6 +16,7 @@ requirements:
     build:
         - python
         - setuptools
+        - setuptools_scm
     run:
         - python
         # dependencies are defined in setup.py
