--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ exclude =
     doc/conf.py,
 
 [pydocstyle]
-match = (?!__)(?!versioneer)(?!_version)(?!conftest).*\.py
+match = (?!__)(?!_version)(?!conftest).*\.py
 match_dir = [^\.][^\docs].*
 ignore = D203,D213
 
