--- a/.github/workflows/pytest_asdf.yml
+++ b/.github/workflows/pytest_asdf.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: ${{ matrix.py }}
       - name: pip installs
         run: |
-          pip install pytest pytest-cov
+          pip install pytest pytest-cov setuptools_scm
           pip install .
       - name: run pytest
         run: |
