--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,59 @@
+[metadata]
+name = weldx
+author = Cagtay Fabry
+author-email = Cagtay.Fabry@bam.de
+home-page = https://www.bam.de/weldx
+description = Python API for the WelDX file format and standard
+long-description = file: README.md
+long_description_content_type = text/markdown
+license = BSD License
+license-file = LICENSE
+platform = any
+keywords = welding
+classifiers =
+    Development Status :: 3 - Alpha
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: BSD License
+    Operating System :: OS Independent
+    Natural Language :: English
+    Programming Language :: Python
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Topic :: Scientific/Engineering :: Physics
+project_urls =
+    Bug Tracker = https://github.com/BAMweldx/weldx/issues
+    Changelog = https://github.com/BAMweldx/weldx/blob/master/CHANGELOG.md
+
+
+[options]
+packages = weldx
+python_requires = >=3.6
+setup_requires =
+    setuptools >=42.0.0
+    setuptools_scm
+install_requires =
+    numpy >=0.18
+    pandas >=1.0
+    xarray >=0.15
+    scipy >=1.4
+    sympy >=1.6
+    pint >=0.11
+    asdf >=2.7
+    bottleneck >=1.3
+    Jinja2 >=2.11
+    networkx >=2
+    matplotlib >=3
+
+
+[options.entry_points]
+asdf_extensions =
+    weldx = weldx.asdf.extension:WeldxExtension
+    weldx-asdf = weldx.asdf.extension:WeldxAsdfExtension
+
+
 [flake8]
 # References:
 # https://flake8.readthedocs.io/en/latest/user/configuration.html
@@ -49,6 +105,3 @@ exclude_lines =
     def __repr__
     def __str__
     def _ipython_display_
-
-[options]
-setup_requires = setuptools_scm
