--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,10 @@ long_description_content_type = text/markdown
 license = BSD License
 license-file = LICENSE
 platform = any
-keywords = welding
+keywords =
+    welding
+    weldx
+    bam
 classifiers =
     Development Status :: 3 - Alpha
     Intended Audience :: Science/Research
@@ -24,9 +27,10 @@ classifiers =
     Programming Language :: Python :: 3.9
     Topic :: Scientific/Engineering :: Physics
 project_urls =
+    Documentation = https://weldx.readthedocs.io
+    Source Code = https://github.com/BAMweldx/weldx
     Bug Tracker = https://github.com/BAMweldx/weldx/issues
     Changelog = https://github.com/BAMweldx/weldx/blob/master/CHANGELOG.md
-
 
 [options]
 packages = weldx
@@ -46,7 +50,7 @@ install_requires =
     Jinja2 >=2.11
     networkx >=2
     matplotlib >=3
-
+include_package_data = True
 
 [options.entry_points]
 asdf_extensions =
