--- a/.github/workflows/conda_build.yml
+++ b/.github/workflows/conda_build.yml
@@ -80,11 +80,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.7'
+          python-version: '3.x'
 
       - name: pip installs
         run: |
-          pip install setuptools_scm
+          python -m pip install --upgrade pip
+          pip install setuptools  setuptools_scm wheel twine
 
       - name: build package
         run: |
