--- a/.github/workflows/conda_build.yml
+++ b/.github/workflows/conda_build.yml
@@ -78,6 +78,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
@@ -85,7 +87,7 @@ jobs:
       - name: pip installs
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools  setuptools_scm wheel twine
+          pip install setuptools setuptools_scm wheel twine
 
       - name: build package
         run: |
