--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,8 +64,8 @@ jobs:
           name: weldx-conda
           path: ${{ env.PACKAGE_DIR }}
 
-      - name: upload package to dev label on Anaconda Cloud
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: upload releases to dev label on Anaconda Cloud
+        if: github.event_name == 'release' && github.event.action == 'created'
         shell: bash -l {0}
         env: # set access token from GitHub secrets
           anaconda_token: ${{ secrets.Anaconda_BAMwelding }}
