--- a/environment.yml
+++ b/environment.yml
@@ -11,7 +11,7 @@ dependencies:
   - xarray>=0.15
   - pint>=0.11
   - bottleneck
-  - asdf>=2.7
+  # - asdf>=2.7
   - openpyxl
   - jinja2
   # graph packages
@@ -45,4 +45,5 @@ dependencies:
   # pip packages
   - pip
   - pip:
+    - git+https://github.com/asdf-format/asdf
     - git+https://github.com/CagtayFabry/sphinx-asdf.git@sphinx-weldx
