--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
@@ -24,6 +24,7 @@ oneOf:
           Unit of the data.
         type: string
     required: [values, unit]
+    additionalProperties: false
 
   - type: object
     description: |
@@ -42,6 +43,7 @@ oneOf:
           (optional) Resulting shape of the data when the expression is evaluated.
         type: array
     required: [values, unit]
+    additionalProperties: false
 
   - type: object
     description: |
@@ -74,8 +76,7 @@ oneOf:
       time: [t]
       values: [t, ...]
     required: [time, unit, shape, interpolation, values]
-
-
+    additionalProperties: false
 
 propertyOrder: [time, unit, shape, interpolation, values]
 flowStyle: block
