--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ install_requires =
     pint >=0.11
     asdf >=2.7
     bottleneck >=1.3
+    boltons
     Jinja2 >=2.11
     networkx >=2
     matplotlib >=3
